# find-opportunities-v2

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
alembic/: env.py
alembic/versions/: 001_initial_schema_16_tables.py  002_review_reasoning_tables.py  003_grounding_tables.py  004_voice_assets.py  005_dismissed_suggestions.py  006_gap_analytics_tables.py  007_validation_reports.py  008_profile_enrichment_tables.py  009_interview_prep_tables.py
app/: __init__.py  main.py  worker.py
app/api/: __init__.py  analytics.py  dashboard.py  discovery.py  gap_routes.py  grounding.py  interview_prep.py  pipeline.py  (+7 more)
config/: schema.yaml
docs/: v1-application-schema.yaml  v1-session-summary.md
frontend/: .gitignore  Dockerfile  next.config.mjs  package-lock.json  package.json  tailwind.config.ts  vitest.config.ts
new-features-from-denmark/: README.md  design-phase-prompts.md  requirements.md
tests/: test_api_profile_enrichment.py  test_domain_throttler.py  test_outbound_validation_integration.py  test_outbound_validator_blocking_rules.py  test_outbound_validator_prop_gate.py  test_outbound_validator_prop_report.py  test_outbound_validator_prop_schema.py  test_outbound_validator_prop_unknown_rules.py  test_outbound_validator_service.py  test_outbound_validator_warning_rules.py  test_outreach_worker.py  test_outreach_worker_gmail.py  test_pipeline_manager_validation_failed.py  test_profile_enrichment_worker.py  test_proposal_review_service.py  test_schema_registry_validation_rules.py  test_validation_repository.py
(+288 files in other folders)
